--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Courgette', cursive;
 }
+  
 header{
     width: 100%;
     height: 100vh;
@@ -92,12 +93,14 @@ main{
 
 .leftside{
     color: palevioletred;
-  text-transform: uppercase;    
+  text-transform: uppercase;
+  margin-left: 13px;    
 }
 .leftside h3{
     font-size: 40px;
     margin-bottom: 20px;
     position: relative;
+    margin-left: 13px;
 }
 
 .leftside h3:after{
@@ -114,13 +117,13 @@ main{
     margin-top: 20px;
     font-size: 70px;
     margin-bottom: 25px;
-
+    margin-left: 13px;
 }
 .leftside h2{
     margin-bottom: 35px;
     font-weight: 500;
     word-spacing: 4px;
-
+    margin-left: 13px;
 }
 
 .leftside .btn1{
@@ -142,6 +145,7 @@ main{
     border-radius: 5px;
     display: inline-block;
     margin-right: 50px;
+    margin-left: 13px;
 }
 .leftside .btn2{
    
